{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 45,
  "lineage": "b2cb0a59-1e2c-32cd-bc85-aff0e4624a62",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "main-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:000000000000:route-table/rtb-72dc71ff",
            "default_route_table_id": "rtb-72dc71ff",
            "id": "rtb-72dc71ff",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-740e92cc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "dev-main-rtb"
            },
            "tags_all": {
              "name": "dev-main-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-9570157d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myapp-igw",
            "aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:000000000000:security-group/sg-affe80a236465e6b4",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-affe80a236465e6b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "192.168.100.60/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "dev-default-sg"
            },
            "tags_all": {
              "name": "dev-default-sg"
            },
            "vpc_id": "vpc-9570157d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myapp-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04681a1dbd79675a5",
            "arn": "arn:aws:ec2:eu-central-1:000000000000:instance/i-8d06d4d11439b9a63",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-8d06d4d11439b9a63",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "server_key",
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-eca5d7d1",
            "private_dns": "ip-192-168-100-5.eu-central-1.compute.internal",
            "private_ip": "192.168.100.5",
            "public_dns": "ec2-54-214-20-119.eu-central-1.compute.amazonaws.com",
            "public_ip": "54.214.20.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-d4e650ab",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-828c7c21",
            "tags": {
              "name": "dev-server"
            },
            "tags_all": {
              "name": "dev-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-affe80a236465e6b4"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default-sg",
            "aws_key_pair.ssh-key",
            "aws_subnet.myapp-subnet-1",
            "data.aws_ami.latest-amazo-linux-image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myapp-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:000000000000:internet-gateway/igw-740e92cc",
            "id": "igw-740e92cc",
            "owner_id": "000000000000",
            "tags": {
              "name": "dev-igw-1"
            },
            "tags_all": {
              "name": "dev-igw-1"
            },
            "vpc_id": "vpc-9570157d"
          },
          "dependencies": [
            "aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myapp-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:000000000000:subnet/subnet-828c7c21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "192.168.100.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-828c7c21",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "dev-subnet-1"
            },
            "tags_all": {
              "name": "dev-subnet-1"
            },
            "vpc_id": "vpc-9570157d"
          },
          "dependencies": [
            "aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myapp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:000000000000:vpc/vpc-9570157d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-e357dfd0",
            "default_route_table_id": "rtb-72dc71ff",
            "default_security_group_id": "sg-affe80a236465e6b4",
            "dhcp_options_id": "dopt-7a8b9c2d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-9570157d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-72dc71ff",
            "owner_id": "000000000000",
            "tags": {
              "name": "dev-vpc"
            },
            "tags_all": {
              "name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}